# StreamVC_model

./: .gitignore  PHASE1_VALIDATION.md  PHASE_PLAN.md  README.md  SETUP.md  check_progress.sh  colab_setup.ipynb  debug_forward.py  pyproject.toml  requirements.txt  test_inference.sh  test_resume.py  test_training_simple.py
analysis/: CRITICAL_BUG_REPORT.md  INFERENCE_ISSUE_ANALYSIS.md  PHASE_1_EMA_COMPREHENSIVE_ANALYSIS.md  decision_matrix.md  official_streamvc_comparison.md  phase1_ema_gan_bugs.md  phase_1_deep_analysis.md
configs/: colab_cache_gen.yaml  colab_gpu_training.yaml  cpu_training.yaml  default.yaml  local_cache_gen.yaml  mps_training.yaml  mps_training_balanced.yaml  mps_training_fixed.yaml  mps_training_validation.yaml  nac_no_rvq.yaml  phase2a_l1only.yaml  phase_1_ema.yaml  phase_1_ema_gan.yaml  phase_1_revert.yaml  phase_a_scale_fix.yaml  phase_a_v2_fixed.yaml  test_libritts.yaml
docs/: streamvc_architecture.md
scripts/: analyze_speaker_embeddings.py  check_cache_data.py  check_content_timbre_leak.py  check_gradients.py  check_pooling_attention.py  check_speaker_encoder_activation.py  check_speaker_encoder_weights.py  check_whitening_leak.py  debug_training_step.py  diagnose_4pattern_vc.py  diagnose_decoder_internals.py  diagnose_speaker_collapse.py  diagnose_speaker_encoder_sanity.py  download_datasets.py  export_vc_samples.py  generate_metadata.py  generate_metadata_from_cache.py  infer.py  inspect_checkpoint_losses.py  preprocess.py  setup_rclone.sh  test_fresh_model.py  test_speaker_encoder.py  test_speaker_pretrain.py  train.py  verify_data.py  (+5 more)
(+25 files in other folders)
